# PolarCodes

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Notes.txt
include/: BaseDecoder.h  BaseSimulator.h  BpskBscChannel.h  CRC.h  CommonTransformations.h  DecoderType.h  Encoder.h  GaussianApproximation.h  OperationsCount.h  PolarCode.h  QpskBscChannel.h  ScCrcAidedDecoder.h  ScCreeperDecoder.h  ScDecoder.h  ScDecoderTreeMaker.h  ScFanoDecoder.h  ScListDecoder.h  ScListFanoDecoder.h  ScOptimized.h  ScRecursiveDecoder.h  ScStackDecoder.h  ScStackOperationCounter.h  ScStackOptimizedDecoder.h  SimulationParameters.h  SimulationType.h
src/: BaseDecoder.cpp  BaseSimulator.cpp  BpskAwgnChannel.cpp  BpskBscChannel.cpp  CMakeLists.txt  CRC.cpp  CommonTransformations.cpp  DecoderType.cpp  Encoder.cpp  GaussianApproximation.cpp  MonteCarloSimulator.cpp  PolarCode.cpp  ScCrcAidedDecoder.cpp  ScCreeperDecoder.cpp  ScDecoder.cpp  ScDecoderTreeMaker.cpp  ScFanoDecoder.cpp  ScFlipDecoder.cpp  ScFlipFanoDecoder.cpp  ScFlipProgDecoder.cpp  ScListDecoder.cpp  ScListFanoDecoder.cpp  ScListFlipOracleStatDecoder.cpp  ScListFlipStatDecoder.cpp  ScOptimized.cpp  ScRecursiveDecoder.cpp  ScStackDecoder.cpp  ScStackOperationCounter.cpp  ScStackOptimizedDecoder.cpp  Simulate.cpp  Test_AwgnBer.cpp  Test_GA.cpp  Test_ScTreeMaker.cpp  main.cpp  mex.cpp  test_creeper.cpp
